Login and register

--- a/ParallelTypeSystem/ParallelTypeSystem.Web/Views/Home/Index.cshtml
+++ b/ParallelTypeSystem/ParallelTypeSystem.Web/Views/Home/Index.cshtml
@@ -1,24 +1,69 @@
-﻿<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-        a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-        is an ideal platform for building RESTful applications on the .NET Framework.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
+﻿<link rel="stylesheet" href="~/Content/home-page-style.css" />
+
+<div class="greeting">
+    <div class="greeting-text">
+        Welcome to ParallelType!
     </div>
 </div>
+<hr>
+<div class="button-container">
+    <div class="button" id="login">
+        <img src="~/Content/images/login-icon.png"/>
+        <div class="label">
+            LOGIN
+        </div>
+    </div>
+    <div class="button" id="register">
+        <img src="~/Content/images/register-icon.png" />
+        <div class="label">
+            REGISTER
+        </div>
+    </div>
+</div>
+
+@section scripts {
+
+<script>
+	$( ".button" ).click(function() {
+		var change;
+
+		if(this.id == "register") {
+			change =
+			"<form id=\"register-form\" style=\"float:right\" method=\"post\" action=\"@Url.Action("Register", "Cookie")\"> \
+			  	<div class=\"field\"> \
+			  		<div class=\"field-label\">Username: </div>\
+			  		<input placeholder=\"Ivan Ivanovich\" name=\"username\"></input>\
+			  	</div>\
+			  	<div class=\"field\"> \
+			  		<div class=\"field-label\">Password: </div>\
+			  		<input type=\"password\" name=\"password\"></input>\
+			  	</div>\
+			  	<div class=\"field\"> \
+			  		<div class=\"field-label\">Repeat password: </div>\
+			  		<input type=\"password\" name=\"confirmPassword\"></input>\
+			  	</div>\
+			  	<div class=\"field\"> \
+			  		<div class=\"field-label\">E-mail: </div>\
+			  		<input placeholder=\"name@domain.extention\" name=\"email\"></input>\
+			  	</div>\
+			  	<input type=\"submit\"></input>\
+			</form>"
+		} else {
+		  	change =
+		  	"<form id=\"login-form\" style=\"float:left\" method=\"post\" action=\"@Url.Action("Login", "Cookie")\"> \
+			  	<div class=\"field\"> \
+			  		<div class=\"field-label\">Email: </div>\
+			  		<input name=\"email\"></input>\
+			  	</div>\
+			  	<div class=\"field\"> \
+			  		<div class=\"field-label\">Password: </div>\
+			  		<input type=\"password\" name=\"password\"></input>\
+			  	</div>\
+			  	<input type=\"submit\"></input>\
+			</form>"
+		}
+		debugger;
+		$( this ).replaceWith(change);
+	});
+</script>
+}
