--- a/ParallelTypeSystem/ParallelTypeSystem.Web/Content/Site.css
+++ b/ParallelTypeSystem/ParallelTypeSystem.Web/Content/Site.css
@@ -1,6 +1,7 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿html, body {
+	height: 90%;
+	background: #151618;
+    color: white;
 }
 
 /* Set padding to keep content from hitting the edges */
