--- a/ParallelTypeSystem/ParallelTypeSystem.Web/Views/Shared/_Layout.cshtml
+++ b/ParallelTypeSystem/ParallelTypeSystem.Web/Views/Shared/_Layout.cshtml
@@ -8,31 +8,21 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
+    <script>
+        var baseHost = "@Request.Url.Authority";
+    </script>
+
+    @if (ViewBag.SuccessMessage != null)
+    {
+        <div style="text-align: center; color: green; font-size: 30px;">@ViewBag.SuccessMessage</div>
+    }
+
+    @if (ViewBag.ErrorMessage != null)
+    {
+        <div style="text-align: center; color: red; font-size: 30px;">@ViewBag.ErrorMessage</div>
+    }
+
+    @RenderBody()
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
