--- a/ParallelTypeSystem/ParallelTypeSystem.Web/Views/Documents/Editor.cshtml
+++ b/ParallelTypeSystem/ParallelTypeSystem.Web/Views/Documents/Editor.cshtml
@@ -1,5 +1,8 @@
 ﻿@model ParallelTypeSystem.Web.Models.DocumentViewModel
 
+@{
+    var blink = "<span class=\"blink-wrapper\"><span class=\"blinking-cursor\">|</span></span>";
+}
 <link rel="stylesheet" href="~/Content/text-editor-style.css"/>
 
 <div class="main-panel">
@@ -77,7 +80,7 @@
         <div class="text-field">
             @if (Model.IsSet)
             {
-                <div class="edit-wrapper">@Html.Raw(Model.Content)</div>
+                <div tabindex="0" class="edit-wrapper">@Html.Raw(Model.Content)</div>
             }
         </div>
     </div>
@@ -135,6 +138,98 @@
 </div><!-- /.modal -->
 
 <script>
+    $(".text-field").hover(function () { this.focus(); }, function () { this.blur(); });
+
+    var isClicked = false;
+
+    $(".text-field").click(function () {
+        if (!isClicked) {
+            var firstSpan = $(".text-field").find('span').first();
+            var newBlink = $('@Html.Raw(blink)');
+            newBlink.insertBefore(firstSpan);
+        }
+
+        isClicked = true;
+    });
+
+    $(".text-field").keyup(function (e) {
+        if (e.keyCode == 37) {
+            // left
+
+            var blink = $('.blink-wrapper');
+            var prev = blink.prev('span');
+            if (prev.length > 0) {
+                var newBlink = $('@Html.Raw(blink)');
+
+                blink.remove();
+                newBlink.insertBefore(prev);
+            }
+        }
+        else if (e.keyCode == 38) {
+            // up
+        }
+        else if (e.keyCode == 39) {
+            // right
+
+            var blink = $('.blink-wrapper');
+            var next = blink.next('span');
+            if (next.length > 0) {
+                var newBlink = $('@Html.Raw(blink)');
+
+                blink.remove();
+                newBlink.insertAfter(next);
+            }
+        }
+        else if (e.keyCode == 40) {
+            // down
+        }
+        else if (e.keyCode == 8) {
+            // backspace
+            var blink = $('.blink-wrapper');
+            var prev = blink.prev();
+            if (prev.length > 0) {
+                prev.remove();
+            }
+        }
+        else if (e.keyCode == 46) {
+            // delete key
+            var blink = $('.blink-wrapper');
+            var next = blink.next('span');
+            if (next.length > 0) {
+                next.remove();
+            }
+        }
+        else if (e.keyCode == 13) {
+            // enter key
+            var blink = $('.blink-wrapper');
+            var prev = blink.prev();
+            if (prev.length > 0) {
+                var br = $('<br>');
+                br.insertAfter(prev);
+            }
+        }
+        //else {
+        //    alert(e.keyCode);
+        //}
+    });
+
+    $('.text-field').keypress(function (e) {
+        var inp = String.fromCharCode(e.keyCode);
+        if (/[a-zA-Z0-9-_ ]/.test(inp)) {
+            var letter = String.fromCharCode(e.keyCode);
+            var blink = $('.blink-wrapper');
+            if (letter == ' ') {
+                letter = '&nbsp;';
+            }
+            var item = $('<span>' + letter + '</span>');
+            item.insertAfter(blink);
+
+            var newBlink = $('@Html.Raw(blink)');
+            blink.remove();
+            newBlink.insertAfter(item);
+        }
+    });
+    
     function showModal(title, bodyHtml, dataId) {
         $('#myModal .modal-title').html(title);
         $('#myModal .modal-body').html(bodyHtml);
