--- a/ParallelTypeSystem/ParallelTypeSystem.Web/Views/Documents/Editor.cshtml
+++ b/ParallelTypeSystem/ParallelTypeSystem.Web/Views/Documents/Editor.cshtml
@@ -153,25 +153,64 @@
     });
 
     $(".text-field").keyup(function (e) {
+        var blink = $('.blink-wrapper');
         if (e.keyCode == 37) {
             // left
 
-            var blink = $('.blink-wrapper');
             var prev = blink.prev('span');
             if (prev.length > 0) {
                 var newBlink = $('@Html.Raw(blink)');
-
                 blink.remove();
                 newBlink.insertBefore(prev);
             }
         }
         else if (e.keyCode == 38) {
-            // up
+            var previousBr = blink.prev('br');
+            if (previousBr.length == 0) {
+                var elementsOnSameRow = blink.prevUntil('br');
+                var firstElementOnSameRow = elementsOnSameRow[elementsOnSameRow.length - 1];
+                previousBr = $(firstElementOnSameRow).prev();
+            }
+
+            if (previousBr.length > 0) {
+                var elementsOnPreviousRow = previousBr.prevUntil('br');
+                elementsOnPreviousRow = elementsOnPreviousRow.toArray().reverse();
+
+                var elementsOnSameRow = blink.prevUntil('br');
+                var elementsCount = elementsOnSameRow.length;
+
+                if (elementsOnPreviousRow.length == 0) {
+                    // Empty line
+                    var newBlink = $('@Html.Raw(blink)');
+                    blink.remove();
+                    newBlink.insertBefore(previousBr);
+                }
+                else {
+                    var indexToInsert = elementsOnSameRow.length - 1;
+                    if (indexToInsert >= 0) {
+                        // Element is not on 0 index
+                        if (indexToInsert > elementsOnPreviousRow.length - 1) {
+                            // Upper line has less symbols
+                            indexToInsert = elementsOnPreviousRow.length - 1;
+                        }
+                        var elementToInsert = $(elementsOnPreviousRow[indexToInsert]);
+
+                        var newBlink = $('@Html.Raw(blink)');
+                        blink.remove();
+                        newBlink.insertAfter(elementToInsert);
+                    }
+                    else {
+                        var elementToInsert = $(elementsOnPreviousRow[0]);
+                        var newBlink = $('@Html.Raw(blink)');
+                        blink.remove();
+                        newBlink.insertBefore(elementToInsert);
+                    }
+                }
+            }
         }
         else if (e.keyCode == 39) {
             // right
 
-            var blink = $('.blink-wrapper');
             var next = blink.next('span');
             if (next.length > 0) {
                 var newBlink = $('@Html.Raw(blink)');
@@ -185,7 +224,6 @@
         }
         else if (e.keyCode == 8) {
             // backspace
-            var blink = $('.blink-wrapper');
             var prev = blink.prev();
             if (prev.length > 0) {
                 prev.remove();
@@ -193,7 +231,6 @@
         }
         else if (e.keyCode == 46) {
             // delete key
-            var blink = $('.blink-wrapper');
             var next = blink.next('span');
             if (next.length > 0) {
                 next.remove();
@@ -201,12 +238,8 @@
         }
         else if (e.keyCode == 13) {
             // enter key
-            var blink = $('.blink-wrapper');
-            var prev = blink.prev();
-            if (prev.length > 0) {
-                var br = $('<br>');
-                br.insertAfter(prev);
-            }
+            var br = $('<br>');
+            br.insertBefore(blink);
         }
         //else {
         //    alert(e.keyCode);
@@ -229,7 +262,7 @@
             newBlink.insertAfter(item);
         }
     });
-    
+
     function showModal(title, bodyHtml, dataId) {
         $('#myModal .modal-title').html(title);
         $('#myModal .modal-body').html(bodyHtml);
